--- a/Payroll_system/src/main/resources/static/index.html
+++ b/Payroll_system/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 	<meta charset="ISO-8859-1">
 </head>
 <body>
-	<a href="viewAll">Hiring Manager</a><br />
+	<a href="viewAllEmployees">Hiring Manager</a><br />
 	<a href="viewAll">Manager</a><br />
 	<a href="viewAll">Employee</a><br />
 </body>
