Sat group update.

--- a/Payroll_system/src/main/resources/static/index.html
+++ b/Payroll_system/src/main/resources/static/index.html
@@ -4,8 +4,8 @@
 	<meta charset="ISO-8859-1">
 </head>
 <body>
-	<a href="viewAllEmployees">Hiring Manager</a><br />
-	<a href="viewAll">Manager</a><br />
-	<a href="viewAll">Employee</a><br />
+	<a href="HRView">Hiring Manager</a><br />
+	<a href="managerView">Manager</a><br />
+	<a href="employeeView">Employee</a><br />
 </body>
 </html>
